[tool.poetry]
name = "pe-de-manga"
version = "0.1.0"
description = "Pé de manga NFT 🥭"
authors = ["cusma <cosimo.bassi@algorand.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyteal = "^0.9.1"
py-algorand-sdk = "^1.9.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
